@@ -222,7 +222,7 @@ use utf8;
 $CGI::Simple::POST_MAX = -1;
 
 package LedgerSMB;
-our $VERSION = '1.3.21';
+our $VERSION = '1.3.22';
 
 my $logger = Log::Log4perl->get_logger('LedgerSMB');
 
@@ -242,7 +242,7 @@ sub new {
     $logger->debug("Begin called from \$filename=$filename \$line=$line \$type=$type \$argstr=$argstr ref argstr=".ref $argstr);
 
     $self->{version} = $VERSION;
-    $self->{dbversion} = "1.3.21";
+    $self->{dbversion} = "1.3.22";
     
     bless $self, $type;
 
