@@ -1,7 +1,7 @@
 RELEASE NOTES
 LedgerSMB 1.3
 
-Latest Revision:  1.3.21, June 17, 2012.
+Latest Revision:  1.3.22, June 17, 2012.
 
 1:  Welcome to LedgerSMB
 
